# ErwinJr2

./: .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  1DMaxwell.c  1DSchrodinger.c  1DThermal.c  CHANGELOG  Doxyfile  EJcanvas.py  ErwinJr.pyw  Info.plist  LICENSE  Makefile  Material.py  OneDMaxwell.py  OneDSchrodinger.py  OneDSelfConsistant.py  OneDThermal.py  OptStrata.py  OpticalTab.py  QCLayers.py  QuantumTab.py  README.md  SaveLoad.py  band.c  band.h  band.py  create_shortcut.py  customQTClass.py  install.py  pyproject.toml  rFittings.py  requirements-dev.txt  requirements.txt  science.h  (+6 more)
.github/workflows/: build-wheel.yml  python-app.yml
.travis/: deploy-win.sh  deploy.sh
ErwinJr2/: .gitignore  EJcanvas.py  ErwinJr.py  ErwinJr.pyw  Material.py  OptStrata.py  OpticalTab.py  QCLayers.py  QCPlotter.py  QuantumTab.py  SaveLoad.py  __init__.py  __main__.py  customQTClass.py  custom_qt_class.py  darkDetect.py  ej_canvas.py  genshortcut.py  index_fitting.py  material.py  opt_strata.py  optical_tab.py  qc_layers.py  qc_plotter.py  qclayers.py  quantum_tab.py  rFittings.py  save_load.py  version.py  versionAndName.py  version_and_name.py
ErwinJr2/OneDQuantum/: .gitignore  1DSchrodinger.c  1DSchrodinger.h  1DSchrodinger.vcxproj  Makefile  OneDSchrodinger.py  __init__.py  band.c  band.h  band.py  c_schrodinger.pyx  science.h  typeDefs.py
ErwinJr2/OneDQuantum/example/: context.py
ErwinJr2/OneDQuantum/fftautocorr/: .travis.yml  LICENSE.md  Makefile  README.md  fftautocorr.c  fftautocorr.h  tablegen.py
ErwinJr2/example/: PQLiu.json  std8um.json
ErwinJr2/gui/: constants.py  custom_qt_class.py  dark_detect.py  erwinjr.py  optical_tab.py  quantum_tab.py
ErwinJr2/images/: EJicns.icns  splash.xcf
ErwinJr2/oned_quantum/: 1DSchrodinger.c  1DSchrodinger.h  Makefile  band.py  c_schrodinger.pyi  type_defs.py
ErwinJr2/oned_quantum/docs/: Doxyfile
ErwinJr2/oned_quantum/fftautocorr/: LICENSE.md  Makefile  tablegen.py  test.c
OneDQuantum/: 1DMaxwell.c  1DMaxwell.vcxproj  1DSchrodinger.c  1DSchrodinger.vcxproj  1DThermal.c  1DThermal.vcxproj  Makefile  OneDMaxwell.py  OneDQuantum.sln  OneDSchrodinger.py  OneDThermal.py  __init__.py  band.c  band.h  band.py  science.h
OneDQuantum/docs/: Doxyfile
OneDQuantum/example/: Band.py  GuidedMode.py  SelfConsistant.py  SimpleSchrodinger.py  Thermal.py  context.py
OneDQuantum/fftautocorr/: .travis.yml  factortable.h  fftautocorr.c  tablegen.py  test.c
docs/: .gitignore  Makefile  Material.rst  OneDMaxwell.rst  OneDQuantum.rst  OneDQuantum_description.rst  OneDSchrodinger.rst  OneDThermal.rst  OptStrata.rst  Profiling.rst  QCLayers.rst  QCPlotter.rst  SaveLoad.rst  ack.rst  bandpy.rst  code_struct.rst  conf.py  index.rst  material.rst  oned_quantum.rst  oned_schrodinger.rst  opt_strata.rst  other.rst  physics.rst  profiling.rst  qc_layers.rst  qc_plotter.rst  requirements.txt  save_load.rst
docs/clib/: filelist.rst
docs/clib/file/: 1DMaxwell_8c.rst  1DSchrodinger_8c.rst  1DThermal_8c.rst  band_8c.rst  band_8h.rst  science_8h.rst
docs/clib/struct/: structBAND.rst  structWZBand.rst  structZBBAND.rst
docs/manual/: cli.rst  gui.rst  install.rst  intro.rst  optic_refs.bib  physics.rst  physics_optics.rst  physics_quantum.rst  quantum_refs.bib  saving.rst
example/: 16um.json  PQLiu.json
images/: EJpng256xcf.xcf
scripts/: README.md  bump_version.sh
test/: 16um.json  Band.py  SelfConsistant.py  SimpleSchrodinger.py  Thermal.py  context.py  test1DBand.py  test1DSchrodinger.py  test1DSelf.py  testEffMass.py  testMaterial.py  testMaxwell.py  testQCLayers.py  testQuantumWell.py  testSelfConsistant.py  testThermal.py  testThreeBandMatrix.py  testTransferMatrix.py
tests/: SimpleSchrodinger.py  testMaterial.py  testQCLayers.py  test_eff_mass.py  test_material.py  test_maxwell.py  test_qclayers.py  test_quantum_well.py  test_simple_schrodinger.py  test_three_band_matrix.py
tool/: .gitignore  GuidedMode.py  context.py  draw_scattering.py  draw_shooting.py  error_profile.py  error_profile_simple.py  gain_iv.py  guided_mode.py  iv_4.csv  iv_8.csv  iv_8_lowlambda.csv  plot_gain.py  plot_qcl.py  plot_strata.py  plotter.py  profQCLayers.py  profVisual.py  prof_qclayers.py  profiling_0.txt  rIndex.py  testBasis.py  testConfinementFactor.py  testPQLiuWaveguide.py  testQCLayers.py  test_confinement_factor.py  verifyRefractiveIndex.py  verify_refractive_index.py
