[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ErwinJr2"
description = "A Quantum Cascade Laser Design Tool"
readme = "README.md"
authors = [{ name = "Ming Lyu", email = "caref.lm@gmail.com" }]
keywords = ["Quantum Cascade Laser", "Maxwell", "Schrodinger", "quantum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.9"
dependencies = ["numpy>=2.0.0", "scipy"]
dynamic = ["version"]

[project.optional-dependencies]
GUI = ["pyqt5", "matplotlib>=3.3", "winshell;sys_platform == 'win32'"]
dev = [
    'sphinx>=2',
    'sphinx_rtd_theme',
    'sphinxcontrib-bibtex>=2.0.0',
    'breathe',
]

[project.gui-scripts]
ErwinJr = "ErwinJr2.__main__:__main__"
ErwinJr-genshortcut = "ErwinJr2.genshortcut:create_shortcut"

[project.urls]
"Docs: User Guide" = "https://erwinjr2.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/ErwinJr2/ErwinJr2"
"homepage" = "https://github.com/ErwinJr2/ErwinJr2"
"Bug Tracker" = "https://github.com/ErwinJr2/ErwinJr2/issues"

[tool.setuptools.packages.find]
include = [
    "ErwinJr2",
    "ErwinJr2.images",
    "ErwinJr2.example",
    "ErwinJr2.OneDQuantum",
    "ErwinJr2.OneDQuantum.fftautocorr",
]

[tool.setuptools.package-data]
ErwinJr2 = ["Info.plist"]
"ErwinJr2.images" = ["*.png", "*.ico", "*.icns"]
"ErwinJr2.example" = ["PQLiu.json"]
"ErwinJr2.OneDQuantum" = [
    "Makefile",
    "*.sln",
    "*.vcxproj",
    "*.c",
    "*.h",
    "*.so",
    "*.dll",
    "*.dylib",
]
"ErwinJr2.OneDQuantum.fftautocorr" = ["*.c", "*.h"]

[tool.setuptools.dynamic]
version = { attr = "ErwinJr2.versionAndName.VERSION" }

[tool.cibuildwheel]
skip = [
    # Skip 32-bit builds
    "*-win32", "*linux_i686",
    # Disable building PyPy wheels on all platforms
    "pp*",
]
test-requires = "pytest"
test-command = "cd {project} && pytest tests"

[tool.cibuildwheel.windows]
test-command = "cd /d {project} && pytest tests"
